--- a/index.html
+++ b/index.html
@@ -417,6 +417,266 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.png" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Petr Mára"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-matejka-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Matejka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrech-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrech"></div>
 
 
@@ -443,241 +703,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Nikola"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.png" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
 
 
 
@@ -703,7 +729,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
 
 
 
@@ -716,7 +742,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -729,33 +755,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/roman-valihrach-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Roman Valihrach"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-matejka-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Matejka"></div>
+<div class="w-16 h-16 text-center"><img src="/img/default-avatar.png" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
 
 
 
@@ -1048,14 +1048,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vqhlp0">
+		<script type="module" data-sveltekit-hydrate="1q46zfl">
 			import { start } from "./_app/immutable/start-0d7f4177.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vqhlp0"]').parentNode,
-				version: "1683233428811",
+				target: document.querySelector('[data-sveltekit-hydrate="1q46zfl"]').parentNode,
+				version: "1683234609331",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
