--- a/lide/roman-valihrach.html
+++ b/lide/roman-valihrach.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-0d7f4177.js">
+		<link rel="modulepreload" href="../_app/immutable/start-d93f9c14.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-b22188ae.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-7fcf9929.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-c9784ee8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-ed60c97f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-f9c9c1a9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-4a0588ea.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-31325569.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-df8a72b4.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-6e91e846.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-b716484b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-37988af7.js"><title>Roman Valihrach | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-0c28a615.js"><title>Roman Valihrach | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -115,7 +115,7 @@
     <div class="sm:flex gap-10 mt-4"><div>
 
 <div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-web.png)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-web.png)"></div></div></div></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-twitter.jpg)"></div></div></div></div>
 
 
 
@@ -160,14 +160,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="pxygfg">
-			import { start } from "../_app/immutable/start-0d7f4177.js";
+		<script type="module" data-sveltekit-hydrate="w9ryed">
+			import { start } from "../_app/immutable/start-d93f9c14.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="pxygfg"]').parentNode,
-				version: "1683234609331",
+				target: document.querySelector('[data-sveltekit-hydrate="w9ryed"]').parentNode,
+				version: "1683234692942",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
