--- a/lide/petr-mara.html
+++ b/lide/petr-mara.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-d93f9c14.js">
+		<link rel="modulepreload" href="../_app/immutable/start-101ff965.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-7fcf9929.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-03b48ebc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-ed60c97f.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-cc3daf12.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-31325569.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-df8a72b4.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-ddf5f9e2.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-b34008bd.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-b716484b.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-76f4ef0b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-0c28a615.js"><title>Petr Mára | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-bbe7d5be.js"><title>Petr Mára | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -114,7 +114,7 @@
 <section class="relative mx-auto py-6 sm:py-10 px-6 max-w-7xl text-custom-darkpurple"><div class="mb-6 uppercase text-gray-500"><a href="/"><i class="fa-solid fa-arrow-left"></i> Zpět</a></div>
     <div class="sm:flex gap-10 mt-4"><div>
 
-<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/petr-mara-twitter.jpg)"></div>
+<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/petr-mara-web.jpg)"></div>
         <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/petr-mara-twitter.jpg)"></div></div></div></div>
 
 
@@ -160,14 +160,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="10ggc30">
-			import { start } from "../_app/immutable/start-d93f9c14.js";
+		<script type="module" data-sveltekit-hydrate="1hjvxhd">
+			import { start } from "../_app/immutable/start-101ff965.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="10ggc30"]').parentNode,
-				version: "1683234692942",
+				target: document.querySelector('[data-sveltekit-hydrate="1hjvxhd"]').parentNode,
+				version: "1683235642178",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
